syntax = "proto3";
package bind.v1;

// BindService
service BindService{
  // bind id and type on socket conn
  rpc BindId(BindIdRequest) returns (BindIdResponse);
  rpc BindExist(BindExistRequest) returns (BindExistResponse);
}
// request
message BindIdRequest{
  int64 fd = 1;
  message BindId{
    string id = 1;
    string type = 2;
  }
  BindId id = 2;
}
// response
message BindIdResponse{}

// request
message BindExistRequest{
  message BindId{
    string id = 1;
    string type = 2;
  }
  BindId id = 2;
}
// response
message BindExistResponse{
  bool exist = 1;
}